Fixed: right radial gradient position was causing horizontal overflow

--- a/app/components/Introduction.css
+++ b/app/components/Introduction.css
@@ -42,7 +42,7 @@
   width: 240px;
   height: 240px;
   top: 15%;
-  right: -60px;
+  right: 0;
 
   background: radial-gradient(
     circle at 70% 38%,
